# pixel

./: Cargo.toml
assets/: cube.rs  diffuse.glsl  mod.rs  shaders.rs
src/: draw.rs  game.rs  loading.rs  main.rs
